[gd_scene load_steps=67 format=3 uid="uid://bavj4xfxsd4u6"]

[ext_resource type="Script" path="res://scripts/panels/vicotry_panel.gd" id="1_8t02s"]
[ext_resource type="Theme" uid="uid://ctgluvw3nd0i1" path="res://assets/victory_panel_preset.tres" id="2_xguwc"]
[ext_resource type="Texture2D" uid="uid://bmnx3xtjaggcy" path="res://assets/icons/home-icon.png" id="3_vcemm"]
[ext_resource type="Texture2D" uid="uid://cdrk0fqpluary" path="res://assets/icons/next-icon.png" id="4_7f5hy"]
[ext_resource type="Texture2D" uid="uid://dnlakiqrg7iu3" path="res://assets/icons/replay-icon.png" id="4_r0bcr"]
[ext_resource type="Texture2D" uid="uid://dc8lg4w0kegn2" path="res://assets/icons/level-select-icon.png" id="5_yijhm"]
[ext_resource type="Texture2D" uid="uid://cmo4b2xr4t4w3" path="res://assets/victory-sprite.png" id="6_cvy5d"]

[sub_resource type="Theme" id="Theme_tnlv8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_o4pnr"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 0, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwtaq"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 0, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhf71"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 0, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0fpa"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 0, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fejow"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 0, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_he7dw"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 256, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6xtp"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 256, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j53k"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 256, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1bhh"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 256, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsrik"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 256, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqvbf"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 512, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fu24"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 512, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu6q7"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 512, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_icpxk"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 512, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3dx1"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 512, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_jta27"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 768, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptqkk"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 768, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3x6o"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 768, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6cfw"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 768, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogw3y"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 768, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_35jnr"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 1024, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_uymhr"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 1024, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_saali"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 1024, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wuuld"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 1024, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k36k3"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 1024, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sf8y7"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 1280, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_77bbx"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 1280, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_00w0m"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 1280, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_607qo"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 1280, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7udb"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 1280, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi866"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 1536, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsnn7"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 1536, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx6d1"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 1536, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0842j"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 1536, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_25jwa"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 1536, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_um0al"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 1792, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aujb"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 1792, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt4f3"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 1792, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b1mh"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 1792, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_nouvo"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 1792, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aeet"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 2048, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nou2"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 2048, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm5m6"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 2048, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_2c2rl"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 2048, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_haxvt"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 2048, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_aig77"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 2304, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcpcy"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 2304, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6v6w"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 2304, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4u31"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 2304, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7f77"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 2304, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_inwnb"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 2560, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iufi3"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 2560, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iiaf7"]
atlas = ExtResource("6_cvy5d")
region = Rect2(912, 2560, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqeha"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1368, 2560, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yv0c"]
atlas = ExtResource("6_cvy5d")
region = Rect2(1824, 2560, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6upk"]
atlas = ExtResource("6_cvy5d")
region = Rect2(0, 2816, 456, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_fs58i"]
atlas = ExtResource("6_cvy5d")
region = Rect2(456, 2816, 456, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0vuo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4pnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwtaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhf71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0fpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fejow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_he7dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6xtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4j53k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1bhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsrik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqvbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fu24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu6q7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icpxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3dx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jta27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptqkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3x6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6cfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ogw3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35jnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uymhr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_saali")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wuuld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k36k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sf8y7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77bbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00w0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_607qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7udb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi866")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsnn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx6d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0842j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25jwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_um0al")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aujb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt4f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b1mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nouvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aeet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nou2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lm5m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2c2rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_haxvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aig77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcpcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6v6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4u31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7f77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inwnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iufi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iiaf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqeha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yv0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6upk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fs58i")
}],
"loop": true,
"name": &"victory",
"speed": 13.0
}]

[node name="VictoryPanel" type="Node2D"]
script = ExtResource("1_8t02s")

[node name="ColorRect2" type="ColorRect" parent="."]
offset_right = 1160.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.376471)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1160.0
offset_bottom = 670.0
scale = Vector2(1, 0.967)
theme = SubResource("Theme_tnlv8")
color = Color(1, 0.937255, 0.0313726, 1)

[node name="HomeButton" type="Button" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 200.0
offset_bottom = 200.0
scale = Vector2(0.782951, 0.782951)
theme = ExtResource("2_xguwc")

[node name="Home-icon" type="Sprite2D" parent="HomeButton"]
position = Vector2(67, 65)
scale = Vector2(0.21, 0.21)
texture = ExtResource("3_vcemm")

[node name="NextLevelButton" type="Button" parent="."]
offset_left = 972.0
offset_top = 69.0
offset_right = 1108.0
offset_bottom = 205.0
scale = Vector2(0.782951, 0.782951)
theme = ExtResource("2_xguwc")

[node name="Next-icon" type="Sprite2D" parent="NextLevelButton"]
position = Vector2(71.5229, 67.6926)
scale = Vector2(0.21, 0.21)
texture = ExtResource("4_7f5hy")

[node name="ReplayButton" type="Button" parent="."]
offset_left = 980.0
offset_top = 472.0
offset_right = 1116.0
offset_bottom = 608.0
scale = Vector2(0.783, 0.783)
theme = ExtResource("2_xguwc")

[node name="Replay-icon" type="Sprite2D" parent="ReplayButton"]
position = Vector2(67, 70)
scale = Vector2(0.21, 0.21)
texture = ExtResource("4_r0bcr")

[node name="LevelSelectionButton" type="Button" parent="."]
offset_left = 980.0
offset_top = 344.0
offset_right = 1116.0
offset_bottom = 480.0
scale = Vector2(0.783, 0.783)
theme = ExtResource("2_xguwc")

[node name="Level-select-icon" type="Sprite2D" parent="LevelSelectionButton"]
position = Vector2(68.0001, 71)
scale = Vector2(0.21, 0.21)
texture = ExtResource("5_yijhm")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 368.0
offset_top = 248.0
offset_right = 792.0
offset_bottom = 328.0
text = "VICTORY"
horizontal_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 320)
scale = Vector2(2.49328, 2.49328)
sprite_frames = SubResource("SpriteFrames_q0vuo")
animation = &"victory"
frame = 56

[connection signal="pressed" from="HomeButton" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="LevelSelectionButton" to="." method="_on_level_selection_button_pressed"]
